tests/dataset/tpc-ds/compiler/c/q29.error
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c: In function ‘test_TPCDS_Q29_quantity_summary’:
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:365:57: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  365 |   if (test_TPCDS_Q29_quantity_summary_result.len != tmp1.len) {
      |                                                         ^
      |                                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:369:66: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  369 |       if (test_TPCDS_Q29_quantity_summary_result.data[i3] != tmp1.data[i3]) {
      |                                                                  ^
      |                                                                  ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:415:27: warning: implicit declaration of function ‘base_item_list_t_create’ [-Wimplicit-function-declaration]
  415 |   base_item_list_t tmp4 = base_item_list_t_create(
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:416:18: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  416 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                  ^
      |                  ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:416:38: error: ‘(store_return_t *)&store_returns’ is a pointer; did you mean to use ‘->’?
  416 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                                      ^
      |                                      ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:416:58: error: ‘(catalog_sale_t *)&catalog_sales’ is a pointer; did you mean to use ‘->’?
  416 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                                                          ^
      |                                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:416:73: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  416 |       store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      |                                                                         ^
      |                                                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:417:15: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  417 |       date_dim.len * date_dim.len * store.len * item.len);
      |               ^
      |               ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:417:30: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  417 |       date_dim.len * date_dim.len * store.len * item.len);
      |                              ^
      |                              ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:417:42: error: ‘(store_t *)&store’ is a pointer; did you mean to use ‘->’?
  417 |       date_dim.len * date_dim.len * store.len * item.len);
      |                                          ^
      |                                          ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:417:53: error: ‘(item_t *)&item’ is a pointer; did you mean to use ‘->’?
  417 |       date_dim.len * date_dim.len * store.len * item.len);
      |                                                     ^
      |                                                     ->
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:458:44: error: incompatible type for argument 1 of ‘contains_array_int’
  458 |                   if (!(contains_array_int(base, 3,
      |                                            ^~~~
      |                                            |
      |                                            list_int
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:62:36: note: expected ‘int *’ but argument is of type ‘list_int’
   62 | static int contains_array_int(int *arr, int len, int item) {
      |                               ~~~~~^~~
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:482:20: error: conflicting types for ‘base’; have ‘base_item_list_t’
  482 |   base_item_list_t base = tmp4;
      |                    ^~~~
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:411:12: note: previous definition of ‘base’ with type ‘list_int’
  411 |   list_int base = list_int_create(3);
      |            ^~~~
/tmp/TestCCompiler_TPCDS_Goldenq291980362169/001/prog.c:520:44: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  520 |   test_TPCDS_Q29_quantity_summary_result = result;
      |                                            ^~~~~~
