tests/dataset/tpc-ds/compiler/c/q29.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:39Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:39Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int contains_array_int(int *arr, int len, int item) {
  for (int i = 0; i < len; i++)
    if (arr[i] == item)
      return 1;
  return 0;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct StoreSale StoreSale;
typedef struct StoreReturn StoreReturn;
typedef struct CatalogSale CatalogSale;
typedef struct DateDim DateDim;
typedef struct Store Store;
typedef struct Item Item;

typedef struct {
  const char *i_item_id;
  const char *i_item_desc;
  const char *s_store_id;
  const char *s_store_name;
  int store_sales_quantity;
  int store_returns_quantity;
  int catalog_sales_quantity;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_sold_date_sk;
  int ss_item_sk;
  int ss_store_sk;
  int ss_customer_sk;
  int ss_quantity;
  int ss_ticket_number;
} store_sale_t;

typedef struct {
  int sr_returned_date_sk;
  int sr_item_sk;
  int sr_customer_sk;
  int sr_ticket_number;
  int sr_return_quantity;
} store_return_t;

typedef struct {
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_bill_customer_sk;
  int cs_quantity;
} catalog_sale_t;

typedef struct {
  int d_date_sk;
  int d_moy;
  int d_year;
} date_dim_t;

typedef struct {
  int s_store_sk;
  const char *s_store_id;
  const char *s_store_name;
} store_t;

typedef struct {
  int i_item_sk;
  const char *i_item_id;
  const char *i_item_desc;
} item_t;

typedef struct {
  int ss_quantity;
  int sr_return_quantity;
  int cs_quantity;
  const char *i_item_id;
  const char *i_item_desc;
  const char *s_store_id;
  const char *s_store_name;
} base_item_t;
typedef struct {
  int len;
  base_item_t *data;
} base_item_list_t;
base_item_list_t create_base_item_list(int len) {
  base_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(base_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_id;
  int i_item_desc;
  int s_store_id;
  int s_store_name;
  double store_sales_quantity;
  double store_returns_quantity;
  double catalog_sales_quantity;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_sold_date_sk;
  int ss_item_sk;
  int ss_store_sk;
  int ss_customer_sk;
  int ss_quantity;
  int ss_ticket_number;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreReturn {
  int sr_returned_date_sk;
  int sr_item_sk;
  int sr_customer_sk;
  int sr_ticket_number;
  int sr_return_quantity;
} StoreReturn;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_bill_customer_sk;
  int cs_quantity;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  int d_moy;
  int d_year;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Store {
  int s_store_sk;
  char *s_store_id;
  char *s_store_name;
} Store;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  char *i_item_id;
  char *i_item_desc;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q29_quantity_summary_result;
static void test_TPCDS_Q29_quantity_summary() {
  tmp1_t tmp1[] = {(tmp1_t){.i_item_id = "ITEM1",
                            .i_item_desc = "Desc1",
                            .s_store_id = "S1",
                            .s_store_name = "Store1",
                            .store_sales_quantity = 10,
                            .store_returns_quantity = 2,
                            .catalog_sales_quantity = 5}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q29_quantity_summary_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q29_quantity_summary_result.len; i3++) {
      if (test_TPCDS_Q29_quantity_summary_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_sold_date_sk = 1,
                                               .ss_item_sk = 1,
                                               .ss_store_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_quantity = 10,
                                               .ss_ticket_number = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  store_return_t store_returns[] = {(store_return_t){.sr_returned_date_sk = 2,
                                                     .sr_item_sk = 1,
                                                     .sr_customer_sk = 1,
                                                     .sr_ticket_number = 1,
                                                     .sr_return_quantity = 2}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_sold_date_sk = 3,
                                                     .cs_item_sk = 1,
                                                     .cs_bill_customer_sk = 1,
                                                     .cs_quantity = 5}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_moy = 4, .d_year = 1999},
      (date_dim_t){.d_date_sk = 2, .d_moy = 5, .d_year = 1999},
      (date_dim_t){.d_date_sk = 3, .d_moy = 5, .d_year = 2000}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {
      (store_t){.s_store_sk = 1, .s_store_id = "S1", .s_store_name = "Store1"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  item_t item[] = {
      (item_t){.i_item_sk = 1, .i_item_id = "ITEM1", .i_item_desc = "Desc1"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  list_int base = list_int_create(3);
  base.data[0] = 1999;
  base.data[1] = 2000;
  base.data[2] = 2001;
  base_item_list_t tmp4 = base_item_list_t_create(
      store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      date_dim.len * date_dim.len * store.len * item.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < store_returns_len; tmp7++) {
      store_return_t sr = store_returns[tmp7];
      if (!(ss.ss_ticket_number == sr.sr_ticket_number &&
            ss.ss_item_sk == sr.sr_item_sk)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < catalog_sales_len; tmp8++) {
        catalog_sale_t cs = catalog_sales[tmp8];
        if (!(sr.sr_customer_sk == cs.cs_bill_customer_sk &&
              sr.sr_item_sk == cs.cs_item_sk)) {
          continue;
        }
        for (int tmp9 = 0; tmp9 < date_dim_len; tmp9++) {
          date_dim_t d1 = date_dim[tmp9];
          if (!(d1.d_date_sk == ss.ss_sold_date_sk)) {
            continue;
          }
          for (int tmp10 = 0; tmp10 < date_dim_len; tmp10++) {
            date_dim_t d2 = date_dim[tmp10];
            if (!(d2.d_date_sk == sr.sr_returned_date_sk)) {
              continue;
            }
            for (int tmp11 = 0; tmp11 < date_dim_len; tmp11++) {
              date_dim_t d3 = date_dim[tmp11];
              if (!(d3.d_date_sk == cs.cs_sold_date_sk)) {
                continue;
              }
              for (int tmp12 = 0; tmp12 < store_len; tmp12++) {
                store_t s = store[tmp12];
                if (!(s.s_store_sk == ss.ss_store_sk)) {
                  continue;
                }
                for (int tmp13 = 0; tmp13 < item_len; tmp13++) {
                  item_t i = item[tmp13];
                  if (!(i.i_item_sk == ss.ss_item_sk)) {
                    continue;
                  }
                  if (!(contains_array_int(base, 3,
                                           d1.d_moy == 4 && d1.d_year == 1999 &&
                                               d2.d_moy >= 4 && d2.d_moy <= 7 &&
                                               d3.d_year))) {
                    continue;
                  }
                  tmp4.data[tmp5] =
                      (base_item_t){.ss_quantity = ss.ss_quantity,
                                    .sr_return_quantity = sr.sr_return_quantity,
                                    .cs_quantity = cs.cs_quantity,
                                    .i_item_id = i.i_item_id,
                                    .i_item_desc = i.i_item_desc,
                                    .s_store_id = s.s_store_id,
                                    .s_store_name = s.s_store_name};
                  tmp5++;
                }
              }
            }
          }
        }
      }
    }
  }
  tmp4.len = tmp5;
  base_item_list_t base = tmp4;
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i14 = 0; i14 < result.len; i14++) {
    if (i14 > 0)
      printf(",");
    result_item_t it = result.data[i14];
    printf("{");
    _json_string("i_item_id");
    printf(":");
    _json_int(it.i_item_id);
    printf(",");
    _json_string("i_item_desc");
    printf(":");
    _json_int(it.i_item_desc);
    printf(",");
    _json_string("s_store_id");
    printf(":");
    _json_int(it.s_store_id);
    printf(",");
    _json_string("s_store_name");
    printf(":");
    _json_int(it.s_store_name);
    printf(",");
    _json_string("store_sales_quantity");
    printf(":");
    _json_float(it.store_sales_quantity);
    printf(",");
    _json_string("store_returns_quantity");
    printf(":");
    _json_float(it.store_returns_quantity);
    printf(",");
    _json_string("catalog_sales_quantity");
    printf(":");
    _json_float(it.catalog_sales_quantity);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q29_quantity_summary_result = result;
  test_TPCDS_Q29_quantity_summary();
  return 0;
}
